WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159813
[MSE] Increase the SourceBuffer "fudge factor"
https://bugs.webkit.org/show_bug.cgi?id=159813
Summary
[MSE] Increase the SourceBuffer "fudge factor"
Eric Carlson
Reported
2016-07-15 07:35:22 PDT
Some media encoding/conversion pipelines are sloppy when doing sample time/timescale math, and the error accumulation results in small gaps in the media timeline.
r202641
increased the maximum allowable gap from 0.01 second to one 24fps frame, but it turns out that at least one large provider has a significant amount of content encoded with up to two 24fps frames.
Attachments
Proposed patch.
(5.93 KB, patch)
2016-07-15 08:49 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2016-07-15 07:36:04 PDT
<
rdar://problem/27372033
>
Eric Carlson
Comment 2
2016-07-15 08:49:12 PDT
Created
attachment 283763
[details]
Proposed patch.
Jon Lee
Comment 3
2016-07-15 09:12:38 PDT
Comment on
attachment 283763
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=283763&action=review
> LayoutTests/media/media-source/media-source-small-gap.html:41 > + makeASample(7, 7, 1, 1, SAMPLE_FLAG.NONE),
The spacing is odd here.
Eric Carlson
Comment 4
2016-07-15 09:21:42 PDT
Comment on
attachment 283763
[details]
Proposed patch. View in context:
https://bugs.webkit.org/attachment.cgi?id=283763&action=review
>> LayoutTests/media/media-source/media-source-small-gap.html:41 >> + makeASample(7, 7, 1, 1, SAMPLE_FLAG.NONE), > > The spacing is odd here.
I originally used one space after each comma, but found that it was difficult to see exactly what was different in each sample.
WebKit Commit Bot
Comment 5
2016-07-15 09:43:12 PDT
Comment on
attachment 283763
[details]
Proposed patch. Clearing flags on attachment: 283763 Committed
r203277
: <
http://trac.webkit.org/changeset/203277
>
WebKit Commit Bot
Comment 6
2016-07-15 09:43:16 PDT
All reviewed patches have been landed. Closing bug.
Ihor Ivlev
Comment 7
2017-03-09 05:44:46 PST
I think we should have different allowable gaps for Audio and Video tracks, and they should be calculated based on the current frame duration. Otherwise AudioWithLargeGap test from
http://yt-dash-mse-test.commondatastorage.googleapis.com/unit-tests/2016.html
fails.
Ihor Ivlev
Comment 8
2017-03-14 01:22:56 PDT
A note on my previous comment: the test failure is reportedly not reproducible with the latest (2017) MSE test cases
http://yt-dash-mse-test.commondatastorage.googleapis.com/unit-tests/2017.html
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug