[MSE] Increase the SourceBuffer "fudge factor" https://bugs.webkit.org/show_bug.cgi?id=159813 <rdar://problem/27372033>

Reviewed by Jon Lee.
Source/WebCore:

Some media encoding/conversion pipelines are sloppy when doing sample time/timescale
math, and the error accumulation results in small gaps in the media timeline. r202641
increased the maximum allowable gap from 0.01 second to one 24fps frame, but it turns
out that at least one large provider has a significant amount of content encoded with
up to two 24fps frames.

No new tests, updated media/media-source/media-source-small-gap.html.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::currentTimeFudgeFactor): Increase maximum gap to 2002 / 24000 frames.

LayoutTests:

* media/media-source/media-source-small-gap-expected.txt:
* media/media-source/media-source-small-gap.html:


Canonical link: https://commits.webkit.org/177967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@203277 268f45cc-cd09-0410-ab3c-d52691b4dbfc